; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/imagesoft/extr_tooldock.c_TbdHandleNotifications.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/imagesoft/extr_tooldock.c_TbdHandleNotifications.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64* }
%struct.TYPE_10__ = type { i64, i32 }

@FALSE = common dso_local global i32 0, align 4
@TOP_DOCK = common dso_local global i64 0, align 8
@NO_DOCK = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TbdHandleNotifications(%struct.TYPE_9__* %0, %struct.TYPE_10__* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %4, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %7, align 4
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %66

15:                                               ; preds = %3
  %16 = load i64, i64* @TOP_DOCK, align 8
  store i64 %16, i64* %8, align 8
  br label %17

17:                                               ; preds = %62, %15
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* @NO_DOCK, align 8
  %20 = icmp ult i64 %18, %19
  br i1 %20, label %21, label %65

21:                                               ; preds = %17
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i32 0, i32 0
  %27 = load i64*, i64** %26, align 8
  %28 = load i64, i64* %8, align 8
  %29 = getelementptr inbounds i64, i64* %27, i64 %28
  %30 = load i64, i64* %29, align 8
  %31 = icmp eq i64 %24, %30
  br i1 %31, label %32, label %61

32:                                               ; preds = %21
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  switch i32 %35, label %59 [
    i32 128, label %36
    i32 131, label %40
    i32 129, label %47
    i32 130, label %53
  ]

36:                                               ; preds = %32
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %38 = load i64, i64* %8, align 8
  %39 = call i32 @TbnRebarChangeSize(%struct.TYPE_9__* %37, i64 %38)
  br label %59

40:                                               ; preds = %32
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %42 = load i64, i64* %8, align 8
  %43 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %44 = ptrtoint %struct.TYPE_10__* %43 to i32
  %45 = call i32 @TbnRebarBeginDrag(%struct.TYPE_9__* %41, i64 %42, i32 %44)
  %46 = load i32*, i32** %6, align 8
  store i32 %45, i32* %46, align 4
  br label %59

47:                                               ; preds = %32
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %49 = load i64, i64* %8, align 8
  %50 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %51 = ptrtoint %struct.TYPE_10__* %50 to i32
  %52 = call i32 @TbnRebarEndDrag(%struct.TYPE_9__* %48, i64 %49, i32 %51)
  br label %59

53:                                               ; preds = %32
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %55 = load i64, i64* %8, align 8
  %56 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %57 = ptrtoint %struct.TYPE_10__* %56 to i32
  %58 = call i32 @TbnRebarChevronPushed(%struct.TYPE_9__* %54, i64 %55, i32 %57)
  br label %59

59:                                               ; preds = %32, %53, %47, %40, %36
  %60 = load i32, i32* @TRUE, align 4
  store i32 %60, i32* %7, align 4
  br label %65

61:                                               ; preds = %21
  br label %62

62:                                               ; preds = %61
  %63 = load i64, i64* %8, align 8
  %64 = add i64 %63, 1
  store i64 %64, i64* %8, align 8
  br label %17

65:                                               ; preds = %59, %17
  br label %66

66:                                               ; preds = %65, %3
  %67 = load i32, i32* %7, align 4
  ret i32 %67
}

declare dso_local i32 @TbnRebarChangeSize(%struct.TYPE_9__*, i64) #1

declare dso_local i32 @TbnRebarBeginDrag(%struct.TYPE_9__*, i64, i32) #1

declare dso_local i32 @TbnRebarEndDrag(%struct.TYPE_9__*, i64, i32) #1

declare dso_local i32 @TbnRebarChevronPushed(%struct.TYPE_9__*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
